<resources>
    <string name="app_name">Solar Calculator</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_rational">Please grant the required permission to get your current location</string>
    <string name="common_button_ok">Ok</string>
    <string name="menu_item_bookmark">View Saved Location</string>
    <string name="menu_item_add_location">Save Location</string>
    <string name="icon_search">Search Icon</string>
    <string name="icon_cancel">Cancel Icon</string>
    <string name="search_hint">Search here...</string>
    <string name="button_rewind">Rewind button</string>
    <string name="button_play">Play</string>
    <string name="button_forward">Forward</string>
</resources>
